@@ -14,6 +14,7 @@
     * mqtt thread has been modified to handle new mqtt based sensors.
     * ds18b20 and bme280 threads has been modified to handle current 1wire based sensors and bme280 sensors.
     * tables are now automatically handled by the weather station.
+    * cleaning thread has been modified to handle new tables.
 
   * FIXED:
     * few corrections to make the weather station works on raspberry pi.
